--- a/index.html
+++ b/index.html
@@ -183,49 +183,49 @@
     {
       coords: [51.70587595409902, 39.1507764],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул1.jpg' width='150'>",
       footer: "ул. Генерала Лизюкова, 56г Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.707053663559186, 39.172805242328955],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул1.jpg' width='150'>",
       footer: "ул. Генерала Лизюкова, 4а Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.672968694149645, 39.15288781349343],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул1.jpg' width='150'>",
       footer: "ул. 9 Января, 136 Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.65437539674106, 39.18360672883552],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул1.jpg' width='150'>",
       footer: "ул. Моисеева, 2 Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.66829249825817, 39.261913065167796],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул1.jpg' width='150'>",
       footer: "улица Димитрова, 90 Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.633007607722654, 39.26924887116447],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул1.jpg' width='150'>",
       footer: "улица Циолковского, 125 Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.658400672190716, 39.10600957116447],
       header: "Пункт приёма металлолома",
-      body: "<b>Принимают:</b> Металл, Техника<br><img src='/img/металлолом.jpg' width='150'>",
+      body: "<b>Принимают:</b> Металл, Техника<br><img src='img/металлолом.jpg' width='150'>",
       footer: "ул. Любы Шевцовой, 17 Работает с 9:00 до 17:00</br>",
       hint: "Металлолом"
     },
@@ -239,7 +239,7 @@
     {
       coords: [51.67680294397338, 39.31974104232895],
       header: "ПК Пласт",
-      body: "<b>Принимают:</b> Бумага, Пластик, Стекло<br><img src='/img/пункт1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага, Пластик, Стекло<br><img src='img/пункт1.jpg' width='150'>",
       footer: "Тамбовский переулок, 64 Работает с 11:00 до 19:00</br>",
       hint: "Пункт"
     },
@@ -253,42 +253,42 @@
     {
       coords: [51.656022083953374, 39.14117328650658],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул1.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул1.jpg' width='150'>",
       footer: "улица Пеше-Стрелецкая, 159в Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.673685793570264, 39.18208035767105],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул3.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул3.jpg' width='150'>",
       footer: "ул. Донбасская, 10 Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
     {
       coords: [51.66912379725599, 39.19780302883552],
       header: "Приём использованных зубных щёток",
-      body: "<b>Принимают:</b> Другое<br><img src='/img/щетки.jpg' width='150'>",
+      body: "<b>Принимают:</b> Другое<br><img src='img/щетки.jpg' width='150'>",
       footer: "Средне-Московская улица, 32Е Работает с 8:00 до 23:00</br>",
       hint: "Щетки"
     },
     {
       coords: [51.66636418128909, 39.19204545711833],
       header: "Прием упаковок для сухого корма",
-      body: "<b>Принимают:</b> Пластик, Другое<br><img src='/img/сухой корм.jpg' width='150'>",
+      body: "<b>Принимают:</b> Пластик, Другое<br><img src='img/сухой корм.jpg' width='150'>",
       footer: "Кольцовская улица, 35 Работает с 10:00 до 22:00</br>",
       hint: "Упаковки сухого корма"
     },
     {
       coords: [51.679725246170555, 39.20628655767104],
       header: "Фандомат EcoPlatform",
-      body: "<b>Принимают:</b> Пластик, Металл<br><img src='/img/фандомат.jpg' width='150'>",
+      body: "<b>Принимают:</b> Пластик, Металл<br><img src='img/фандомат.jpg' width='150'>",
       footer: "площадь Генерала Черняховского, 1 Работает круглосуточно</br>https://ecoplatform.ru/fandomats",
       hint: "Фандомат"
     },
     {
       coords: [51.67004712695425, 39.20551809999999],
       header: "Экообменник для сдачи крышечек во Вкусвилле",
-      body: "<b>Принимают:</b> Пластик<br><img src='/img/экообменник.jpg' width='150'>",
+      body: "<b>Принимают:</b> Пластик<br><img src='img/экообменник.jpg' width='150'>",
       footer: "проспект Революции, 48 Работает с 8:00 до 22:00</br>",
       hint: "Экообменник"
     },
@@ -302,7 +302,7 @@
     {
       coords: [51.70470569740106, 39.19078751732097],
       header: "Пункт приема макулатуры Стимул",
-      body: "<b>Принимают:</b> Бумага<br><img src='/img/стимул2.jpg' width='150'>",
+      body: "<b>Принимают:</b> Бумага<br><img src='img/стимул2.jpg' width='150'>",
       footer: "ул. Хользунова, 38 Работает с 9:00 до 16:00</br>https://vtorma-vrn.ru/",
       hint: "Макулатура"
     },
@@ -316,7 +316,7 @@
     {
       coords: [51.7052319505889, 39.15053782883552],
       header: "Экоцентр Зелёный дом",
-      body: "<b>Принимают:</b> Одежда, Другое<br><img src='/img/экоцентр лизюкова.jpg' width='150'>",
+      body: "<b>Принимают:</b> Одежда, Другое<br><img src='img/экоцентр лизюкова.jpg' width='150'>",
       footer: "ул. Генерала Лизюкова, 85 Работает с 11:00 до 19:00</br>https://vk.com/ecocentr_vrn",
       hint: "Пункт приема"
     }
